--- a/templates/_base.html
+++ b/templates/_base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Inauguration 2013</title>
+    <title>{{ PROJECT_NAME }}</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
@@ -111,23 +111,6 @@
 				</div>
     		</div>
     	</div>
-		<div class="container" id="toggles">
-			<div class="row">
-				<div class="span12">
-					<ul>
-						<li id="mr-president-toggle" class="selected"><span>
-							<h3>Send A Postcard To The President</h3>
-						</span></li>
-						<li id="chat-toggle"><span>
-							<h3><span class="live">LIVE NOW: </span><span class="pregame">ARCHIVE: </span>Inauguration Chat</h3>
-                            <div id="live-chat-widget-wrapper">
-                                <div id="live-chat-widget"></div>
-                            </div>
-						</span></li>
-					</ul>
-				</div>
-			</div>
-		</div>
     </div>
 
     <div id="main-content">
