--- a/templates/tumblr-form.html
+++ b/templates/tumblr-form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Dear Mr. President | NPR</title>
+    <title>My Family Meal | NPR</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
