--- a/templates/_mr_president.html
+++ b/templates/_mr_president.html
@@ -1,5 +1,5 @@
 <div class="mr-president-form">
-    <form id="president-form" method="post" enctype="multipart/form-data" action="http://127.0.0.1:8001/family-meal/">
+    <form id="president-form" method="post" enctype="multipart/form-data" action="http://{{ SERVERS[0] }}/family-meal/">
         <ol>
             <li class="form-vote">
             	<label for="voted">This is my family meal:</label>
