update form to ask for initials instead of name. closes #45

--- a/less/app-mr-president.less
+++ b/less/app-mr-president.less
@@ -140,6 +140,8 @@
 	}
 	input[type='text'] {
 		padding: 5px 10px;
+		
+		&.signed-name { width: 70px; }
 	}
 	input[type='radio'] {
 		margin-right: 10px;
@@ -166,9 +168,8 @@
 		cursor: pointer;
 		text-shadow: none;
 		border-radius: 0;
-	}
-	button[type='submit']:hover {
-		opacity: 0.7;
+		
+		&:hover { opacity: 0.7; }
 	}
 }
 
