--- a/templates/_mr_president.html
+++ b/templates/_mr_president.html
@@ -16,8 +16,8 @@
                 <textarea name="message" required></textarea>
             </li>
             <li class="form-signature">
-            <label for="signed_name">Signed,</label>
-                <input type="text" name="signed_name" placeholder="Your Initials" required></input> from
+            <label for="signed_name">Initialed,</label>
+                <input type="text" name="signed_name" placeholder="Your Initials" class="signed-name" required></input> from
                 <input type="text" name="location" placeholder="Your City And State" required></input>
             </li>
             <li class="form-submit">
