clear out unrelated files

--- a/less/app-tumblr-form.less
+++ b/less/app-tumblr-form.less
@@ -12,7 +12,7 @@ a {
 	&:hover { color: #bccae5; }
 }
 
-.mr-president-form {
+.tumblr-form {
 	max-width: 600px;
 	margin: 0 auto;
 	padding-top: 10px;
@@ -117,5 +117,5 @@ a {
 }
 
 @media (max-width: 480px) {
-	.mr-president-form input[type='file'] { font-size: 12px; }
+	.tumblr-form input[type='file'] { font-size: 12px; }
 }
