--- a/templates/tumblr-form.html
+++ b/templates/tumblr-form.html
@@ -18,7 +18,7 @@
     {{ JS.push('js/lib/underscore.js') }}
     {{ JS.render('js/app-tumblr-form.min.js') }}
 
-{% include '_mr_president.html' %}
+{% include '_dinner-confessional.html' %}
 
 </body>
 </html>
