--- a/templates/_dinner-confessional.html
+++ b/templates/_dinner-confessional.html
@@ -1,5 +1,5 @@
-<div class="mr-president-form">
-    <form id="president-form" method="post" enctype="multipart/form-data" action="http://{{ SERVERS[0] }}/family-meal/">
+<div class="tumblr-form">
+    <form id="tumblr-form" method="post" enctype="multipart/form-data" action="http://{{ SERVERS[0] }}/family-meal/">
         <ol>
             <li class="form-photo">
                 <label class="header">This is my confession ...</label>
@@ -32,7 +32,7 @@
         * Handle simple form validation for browsers that do not support
         * the HTML5 "required" attribute on form elements.
         */
-        $('#president-form').submit(function(event){
+        $('#tumblr-form').submit(function(event){
             var $this = $(this);
             var inputs = [];
             inputs.push($this.find('textarea').text());
@@ -51,7 +51,7 @@
 
     <script type="text/javascript">
         $(document).ready(function() {
-            $('#president-form').submit(function(e) {
+            $('#tumblr-form').submit(function(e) {
                 var btn = $('.form-submit button');
 
                 btn.text('Sending, please wait...');
@@ -65,7 +65,7 @@
                 var version = parseInt(v[1]);
 
                 if (version < 6) {
-                    $('.mr-president-form').html('<p>Sorry, iOS versions older than 6 are not supported.');
+                    $('.tumblr-form').html('<p>Sorry, iOS versions older than 6 are not supported.');
                 }
             }
         });
