--- a/less/app-tumblr-form.less
+++ b/less/app-tumblr-form.less
@@ -41,7 +41,6 @@ a {
 	ol > li {
 		padding: 10px 20px;
 		background-color: #f1f1f1;
-		border-bottom: 2px solid #fff;
 	}
 	ul > li {
 		padding: 0;
@@ -78,6 +77,7 @@ a {
 		color: #111;
 		
 		&.signed-name { width: 70px; }
+		&.signed-location { margin-left: 0; }
 	}
 	input[type='text'] {
 		padding: 5px 10px;
