tweak to tumblr form styles

--- a/less/app-tumblr-form.less
+++ b/less/app-tumblr-form.less
@@ -53,14 +53,16 @@ a {
 		font-size: 17px;
 		display: block;
 		margin-bottom: 5px;
+		
+		&.header { margin-bottom: 5px; }
+		&.instructions {
+			font-weight: normal;
+			font-size: 14px;
+			margin-bottom: 5px;
+		}
 	}
-	label.instructions {
-		font-weight: normal;
-		font-size: 14px;
-		margin-bottom: 5px;
-	}
-	li.form-photo label.header {
-		margin-bottom: 15px;
+	li.form-intro p {
+		margin: 0;
 	}
 	li.form-photo label.instructions {
 		margin-bottom: 15px;
