--- a/templates/_dinner-confessional.html
+++ b/templates/_dinner-confessional.html
@@ -1,24 +1,28 @@
 <div class="tumblr-form">
     <form id="tumblr-form" method="post" enctype="multipart/form-data" action="http://{{ SERVERS[0] }}/family-meal/">
         <ol>
+                <li class="form-intro">
+                <label class="header">Time to 'fess up.</label>
+                <p>Eating at the same table is tough for many families, and even if we're gathered together, we're not eating the same foods.</p>
+                </li>
             <li class="form-photo">
-                <label class="header">This is my confession ...</label>
                 <img src="img/sample-photo-2.jpg" alt="Sample Photo" class="sample-photo" />
                 <label for="image" class="instructions">
-                	Before you all dig in tonight, snap one photo that shows what's on everybody's plate. Upload that here.
+                        <strong>SHOW:</strong> Take a photo of your family's dinner plates.
                 </label>
                 <input type="file" name="image" width="90" accept="image/*" required>
             </li>
             <li class="form-message">
                 <label for="message" class="instructions">
-                	Tell us a bit about who's eating what and why. Got a tip for getting dinner on the table quickly? Share that, too. We're all in this together.
+                        <strong>SHARE:</strong> Tell us a bit about who's eating what and why. Got a tip for getting dinner on the table quickly? Share that, too if you like. We're all in this together.
                 </label>
                 <textarea name="message" required></textarea>
             </li>
             <li class="form-signature">
             <label for="signed_name">Initialed,</label>
-                <input type="text" name="signed_name" placeholder="Your Initials" class="signed-name" required></input> from
-                <input type="text" name="location" placeholder="Your City And State" required></input>
+                <input type="text" name="signed_name" placeholder="Your Initials" class="signed-name" required></input>
+                from
+                <input type="text" name="location" placeholder="Your City And State" class="signed-location" required></input>
             </li>
             <li class="form-submit">
                 <span class="gentle-reminder" style="display:none;">Please add a photo, an explanation, your initials and where you're from. Thanks!<br/></span>
