add example thumb to form. closes #52

--- a/less/app-tumblr-form.less
+++ b/less/app-tumblr-form.less
@@ -31,13 +31,9 @@ a {
 		padding: 0;
 		list-style: none;
 	}
-	li:after {
-		visibility: hidden;
-		display: block;
-		content: "";
-		clear: both;
-		height: 0;
-    }
+	/*
+	li:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }
+    */
 	ol > li {
 		padding: 10px 20px;
 		background-color: #f1f1f1;
@@ -93,9 +89,9 @@ a {
 	}
 	img.sample-photo {
 		float: right;
-		margin-left: 10px;
-		width: 30%;
-		max-width: 138px;
+		margin: 11px 20px 11px 11px;
+		width: 33%;
+		max-width: 200px;
 	}
 	button[type='submit'] {
 		background-color: #7598c9;
