make smaller thumb for form

--- a/templates/_dinner-confessional.html
+++ b/templates/_dinner-confessional.html
@@ -1,6 +1,6 @@
 <div class="tumblr-form">
     <form id="tumblr-form" method="post" enctype="multipart/form-data" action="http://{{ SERVERS[0] }}/family-meal/">
-		<img src="img/family-meal.png" alt="Sample Photo" class="sample-photo" />
+		<img src="img/family-meal-200.jpg" alt="Sample Photo" class="sample-photo" />
         <ol>
                 <li class="form-intro">
                 <label class="header">Time to &rsquo;fess up.</label>
