form: add comma to share text. closes #64

--- a/templates/_dinner-confessional.html
+++ b/templates/_dinner-confessional.html
@@ -14,7 +14,7 @@
             </li>
             <li class="form-message">
                 <label for="message" class="instructions">
-                        <strong>SHARE:</strong><br />Tell us a bit about who&rsquo;s eating what and why. Got a tip for getting dinner on the table quickly? Share that, too if you like. We&rsquo;re all in this together.
+                        <strong>SHARE:</strong><br />Tell us a bit about who&rsquo;s eating what and why. Got a tip for getting dinner on the table quickly? Share that, too, if you like. We&rsquo;re all in this together.
                 </label>
                 <textarea name="message" required></textarea>
             </li>
