--- a/templates/_dinner-confessional.html
+++ b/templates/_dinner-confessional.html
@@ -4,7 +4,7 @@
         <ol>
                 <li class="form-intro">
                 <label class="header">Time to &rsquo;fess up.</label>
-                <p><a href="http://www.npr.org/series/172693794/on-the-run-how-families-struggle-to-eat-well-and-exercise">The results are in</a>: Eating at the same table is tough for many families, and even if we&rsquo;re gathered together, we&rsquo;re not eating the same foods.</p>
+                <p><a href="http://www.npr.org/series/172693794/on-the-run-how-families-struggle-to-eat-well-and-exercise">The results are in</a>: Eating at the same table is tough for many families, and even if we&rsquo;re gathered together, we&rsquo;re not eating the same foods. What's your dinner table look like?</p>
                 </li>
             <li class="form-photo">
                 <label for="image" class="instructions">
