tweak form font sizes

--- a/less/app-tumblr-form.less
+++ b/less/app-tumblr-form.less
@@ -31,12 +31,10 @@ a {
 		padding: 0;
 		list-style: none;
 	}
-	/*
-	li:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }
-    */
 	ol > li {
 		padding: 10px 20px;
 		background-color: #f1f1f1;
+		font-size: 14px;
 	}
 	ul > li {
 		padding: 0;
