--- a/templates/_dinner-confessional.html
+++ b/templates/_dinner-confessional.html
@@ -3,6 +3,7 @@
 		<img src="img/family-meal-200.jpg" alt="Sample Photo" class="sample-photo" />
         <ol>
             <li class="form-intro">
+                <h2>This project has now concluded. Thank you for your submissions.</h2>
                 <label class="header">Time to &rsquo;fess up.</label>
                 <p><a href="http://www.npr.org/series/172693794/on-the-run-how-families-struggle-to-eat-well-and-exercise">The results are in</a>: Eating at the same table is tough for many families, and even if we&rsquo;re gathered together, we&rsquo;re not eating the same foods. What's your dinner table look like?</p>
                 </li>
@@ -10,23 +11,23 @@
                 <label for="image" class="instructions">
                         <strong>SHOW:</strong><br />Take a photo of your family&rsquo;s dinner plates.
                 </label>
-                <input type="file" name="image" width="90" accept="image/*" required>
+                <input type="file" name="image" width="90" accept="image/*" disabled="disabled">
             </li>
             <li class="form-message">
                 <label for="message" class="instructions">
                         <strong>SHARE:</strong><br />Tell us a bit about who&rsquo;s eating what and why. Got a tip for getting dinner on the table quickly? Share that, too, if you like. We&rsquo;re all in this together.
                 </label>
-                <textarea name="message" required></textarea>
+                <textarea name="message" disabled="disabled"></textarea>
             </li>
             <li class="form-signature">
             <label for="signed_name">Initialed,</label>
-                <input type="text" name="signed_name" placeholder="Your Initials" class="signed-name" required></input>
+                <input type="text" name="signed_name" placeholder="Your Initials" class="signed-name" disabled="disabled"></input>
                 from
-                <input type="text" name="location" placeholder="Your City And State" class="signed-location" required></input>
+                <input type="text" name="location" placeholder="Your City And State" class="signed-location" disabled="disabled"></input>
             </li>
             <li class="form-submit">
                 <span class="gentle-reminder" style="display:none;">Please add a photo, an explanation, your initials and where you&rsquo;re from. Thanks!<br/></span>
-                <button type="submit" class="btn">Send</button>
+                <button type="submit" class="btn" disabled="disabled">Send</button>
             </li>
         </ol>
     </form>
@@ -36,42 +37,42 @@
         * Handle simple form validation for browsers that do not support
         * the HTML5 "required" attribute on form elements.
         */
-        $('#tumblr-form').submit(function(event){
-            var $this = $(this);
-            var inputs = [];
-            inputs.push($this.find('textarea').text());
-            inputs.push($this.find("input[type='file']").attr('value'));
-            inputs.push($this.find("input[name='signed_name']").attr('value'));
-            inputs.push($this.find("input[name='location']").attr('value'));
-            _.each(inputs, function(input){
-                if (input === '') {
-                    event.preventDefault();
-                    $this.find('span.gentle-reminder').show();
-                }
-            });
-        });
+        //$('#tumblr-form').submit(function(event){
+        //    var $this = $(this);
+        //    var inputs = [];
+        //    inputs.push($this.find('textarea').text());
+        //    inputs.push($this.find("input[type='file']").attr('value'));
+        //    inputs.push($this.find("input[name='signed_name']").attr('value'));
+        //    inputs.push($this.find("input[name='location']").attr('value'));
+        //    _.each(inputs, function(input){
+        //        if (input === '') {
+        //            event.preventDefault();
+        //            $this.find('span.gentle-reminder').show();
+        //        }
+        //    });
+        //});
     </script>
     <![endif]-->
 
     <script type="text/javascript">
-        $(document).ready(function() {
-            $('#tumblr-form').submit(function(e) {
-                var btn = $('.form-submit button');
+        // $(document).ready(function() {
+        //     $('#tumblr-form').submit(function(e) {
+        //         var btn = $('.form-submit button');
 
-                btn.text('Sending, please wait...');
-                btn.attr('disabled', 'disabled');
+        //         btn.text('Sending, please wait...');
+        //         btn.attr('disabled', 'disabled');
 
-                return true;
-            });
+        //         return true;
+        //     });
 
-            if (/iP(hone|od|ad)/.test(navigator.platform)) {
-                var v = (navigator.appVersion).match(/OS (\d+)_(\d+)_?(\d+)?/);
-                var version = parseInt(v[1]);
+        //     if (/iP(hone|od|ad)/.test(navigator.platform)) {
+        //         var v = (navigator.appVersion).match(/OS (\d+)_(\d+)_?(\d+)?/);
+        //         var version = parseInt(v[1]);
 
-                if (version < 6) {
-                    $('.tumblr-form').html('<p>Sorry, iOS versions older than 6 are not supported.');
-                }
-            }
-        });
+        //         if (version < 6) {
+        //             $('.tumblr-form').html('<p>Sorry, iOS versions older than 6 are not supported.');
+        //         }
+        //     }
+        // });
     </script>
 </div>
